edpdgen_lib/src/stardict/input_parsers/snapshots/edpdgen_lib__stardict__input_parsers__dpd__tests__word_data_tests___0_false.snap
---
source: edpdgen_lib/src/stardict/input_parsers/dpd.rs
expression: word_data

---
  <hr />
  <div>
    <h4 id="ābādha_dpd" class="word-info-heading-dpd">ābādha</h4>

    <table class="word-info-table-dpd">
      <tbody><tr><td>Pāli</td><td><span>ābādho</span></td></tr><tr><td>Grammar</td><td><span>masc, abstr</span></td></tr><tr><td>English</td><td><span><strong>disease; sickness; illness; affliction</strong></span></td></tr><tr><td>Root</td><td><span>√bādh<sup>･</sup>1 a (to press, oppress)</span></td></tr><tr><td>Construction</td><td><span>ā + √bādh + a</span></td></tr><tr><td>Derivative</td><td><span>kita (a)</span></td></tr><tr><td>Sanskrit</td><td><span><i>ābādha</i></span></td></tr><tr><td>Sanskrit Root</td><td><span><i>√bādh</i>&nbsp;cl. 1&nbsp;(to oppress)</span></td></tr></tbody>
    </table>
    <br /><span>so aparena samayena tamhā <b>ābādhā</b> mucceyya</span><br /><span class="sutta-source-dpd"><i>DN 2.19 sāmaññaphalasuttaṃ</i></span><br /><br /><span>saṅkhārā ca h'idaṃ, bhikkhave, attā abhavissaṃsu, na'y'idaṃ saṅkhārā <b>ābādhāya</b> saṃvatteyyuṃ, labbhetha ca saṅkhāresu, evaṃ me saṅkhārā hontu, evaṃ me saṅkhārā mā ahesun'ti.</span><br /><span class="sutta-source-dpd"><i>SN 22.59 anattalakkhaṇasuttaṃ</i></span><br /><br /><div>
  <a class="dictionary-feedback-link-dpd" href="fb_url?entry.267696921=host url&entry.1433863141=host version" target="_blank">spot a mistake in the dictionary? fix it here!</a>
</div>
<br />

</div>

<div>
<details>
<summary>Inflection Table</summary>
[ITABLE: ābādha]
</details>
</div>
<br />

<div>
<a class="dictionary-word-back-to-top-link-dpd" href="#" onclick="document.getElementById('top-dpd').parentElement.previousElementSibling.scrollIntoView();return false;">&#x25B2; back to top</a>
</div>

