edpdgen_lib/src/stardict/input_parsers/snapshots/edpdgen_lib__stardict__input_parsers__dpd__tests__word_data_tests___12.snap
---
source: edpdgen_lib/src/stardict/input_parsers/dpd.rs
expression: word_data

---
  <hr />
  <div>
    <h4 id="adhikāra_4_dpd">adhikāra 4</h4>

    <table class="word-info-table-dpd">
      <tbody><tr><td>Pāli</td><td><span>adhikāro</span></td></tr><tr><td>Grammar</td><td><span>m</span></td></tr><tr><td>English</td><td><span><strong>oh we love tests</strong></span></td></tr><tr><td></td><td><span>lit. LM13</span></td></tr><tr><td>Root</td><td><span>0<sup>0</sup>0 o (0)</span></td></tr><tr><td></td><td><span>RiC13 in comps</span></td></tr><tr><td>Construction</td><td><span>adhi + √kar > kār + *a</span></td></tr><tr><td>Derivative</td><td><span>kitaka (*a)</span></td></tr><tr><td>Sanskrit</td><td><span><i>adhikāra</i></span></td></tr><tr><td>Sanskrit Root</td><td><span><i>0</i>&nbsp;cl. 12</span></td></tr></tbody>
    </table>
    <br /><div>
  <a class="dictionary-feedback-link-dpd" href="fb_url?entry.267696921=host url&entry.1433863141=host version" target="_blank">spot a mistake in the dictionary? fix it here!</a>
</div>
<br />

</div>

<div>
[ITABLE: adhikāra 4]
</div>
<br />

<div>
<a class="dictionary-word-back-to-top-link-dpd" href="#" onclick="document.getElementById('top-dpd').parentElement.previousElementSibling.scrollIntoView();return false;">&#x25B2; back to top</a>
</div>

