edpdgen_lib/src/stardict/input_parsers/snapshots/edpdgen_lib__stardict__input_parsers__dpd__tests__word_data_tests___12_false.snap
---
source: edpdgen_lib/src/stardict/input_parsers/dpd.rs
expression: word_data

---
  <hr />
  <div>
    <h4 id="abyāpajjha_dpd" class="word-info-heading-dpd">abyāpajjha</h4>

    <table class="word-info-table-dpd">
      <tbody><tr><td>Pāli</td><td><span>abyāpajjhaṃ</span></td></tr><tr><td>Grammar</td><td><span>nt, ptp of na vyābādheti, neg</span></td></tr><tr><td>English</td><td><span><strong>freedom from oppressive pain; relief from suffering</strong></span></td></tr><tr><td></td><td><span>lit. not to be oppressed</span></td></tr><tr><td>Root</td><td><span>√bādh<sup>･</sup>1 a (to press, oppress)</span></td></tr><tr><td>Construction</td><td><span>na > a + vi + ā > byā + √bādh + ya</span></td></tr><tr><td>Phonetic Changes</td><td><span>vi > by</span></td></tr><tr><td>Derivative</td><td><span>kicca (ya)</span></td></tr><tr><td>Compound</td><td><span>kammadhāraya (na + byāpajjha)</span></td></tr><tr><td>Antonym</td><td><span>byāpajjha</span></td></tr><tr><td>Variant</td><td><span>abyābajjha, avyāpajjha</span></td></tr><tr><td>Sanskrit</td><td><span><i>avyābadhya</i></span></td></tr><tr><td>Sanskrit Root</td><td><span><i>√bādh</i>&nbsp;cl. 1&nbsp;(to oppress)</span></td></tr><tr><td>Notes</td><td><span>confusion between √bādh & √pad</span></td></tr></tbody>
    </table>
    <br /><span>nekkhamme adhimuttassa,<br/>pavivekañ'ca cetaso,<br/><b>abyāpajjh</b>'ādhimuttassa,<br/>upādānakkhayassa ca.</span><br /><span class="sutta-source-dpd"><i>TH 243 soṇakoḷivisattheragāthā</i></span><br /><br /><span>paṭisaṅkhā yoniso gilānappaccayabhesajjaparikkhāraṃ paṭisevati, yāva'd'eva uppannānaṃ veyyābādhikānaṃ vedanānaṃ paṭighātāya, <b>abyāpajjha</b>paramatāya</span><br /><span class="sutta-source-dpd"><i>MN 2 sabbāsavasuttaṃ</i></span><br /><br /><div>
  <a class="dictionary-feedback-link-dpd" href="fb_url?entry.267696921=host url&entry.1433863141=host version" target="_blank">spot a mistake in the dictionary? fix it here!</a>
</div>
<br />

</div>

<div>
<details>
<summary>Inflection Table</summary>
[ITABLE: abyāpajjha]
</details>
</div>
<br />

<div>
<a class="dictionary-word-back-to-top-link-dpd" href="#" onclick="document.getElementById('top-dpd').parentElement.previousElementSibling.scrollIntoView();return false;">&#x25B2; back to top</a>
</div>

