edpdgen_lib/src/stardict/input_parsers/snapshots/edpdgen_lib__stardict__input_parsers__dpd__tests__word_data_tests___1_false.snap
---
source: edpdgen_lib/src/stardict/input_parsers/dpd.rs
expression: word_data

---
  <hr />
  <div>
    <h4 id="ābādhato_dpd" class="word-info-heading-dpd">ābādhato</h4>

    <table class="word-info-table-dpd">
      <tbody><tr><td>Pāli</td><td><span>ābādhato</span></td></tr><tr><td>Grammar</td><td><span>ind, adv, abl sg of ābādha</span></td></tr><tr><td>English</td><td><span><strong>as disease; as sickness; as illness; as affliction</strong></span></td></tr><tr><td>Root</td><td><span>√bādh<sup>･</sup>1 a (to press, oppress)</span></td></tr><tr><td>Construction</td><td><span>ā + √bādh + a + to<br/>ābādha + to</span></td></tr><tr><td>Derivative</td><td><span>taddhita (to)</span></td></tr><tr><td>Sanskrit</td><td><span><i>ābādhāt</i></span></td></tr><tr><td>Sanskrit Root</td><td><span><i>√bādh</i>&nbsp;cl. 1&nbsp;(to oppress)</span></td></tr><tr><td>Commentary</td><td><span>(MNa) rog'aṭṭhena <b>ābādhato</b></span></td></tr></tbody>
    </table>
    <br /><span>so yad'eva tattha hoti rūpagataṃ vedanāgataṃ saññāgataṃ saṅkhāragataṃ viññāṇagataṃ, te dhamme aniccato dukkhato rogato gaṇḍato sallato aghato <b>ābādhato</b> parato palokato suññato anattato samanupassati.</span><br /><span class="sutta-source-dpd"><i>AN 9.36 jhānasuttaṃ</i></span><br /><br /><div>
  <a class="dictionary-feedback-link-dpd" href="fb_url?entry.267696921=host url&entry.1433863141=host version" target="_blank">spot a mistake in the dictionary? fix it here!</a>
</div>
<br />

</div>

<div>
<details>
<summary>Inflection Table</summary>
[ITABLE: ābādhato]
</details>
</div>
<br />

<div>
<a class="dictionary-word-back-to-top-link-dpd" href="#" onclick="document.getElementById('top-dpd').parentElement.previousElementSibling.scrollIntoView();return false;">&#x25B2; back to top</a>
</div>

