edpdgen_lib/src/stardict/input_parsers/snapshots/edpdgen_lib__stardict__input_parsers__dpd__tests__word_data_tests___2.snap
---
source: edpdgen_lib/src/stardict/input_parsers/dpd.rs
expression: word_data

---
  <hr />
  <div>
    <h4 id="ābādhika_dpd">ābādhika</h4>

    <table class="word-info-table-dpd">
      <tbody><tr><td>Pāli</td><td><span>ābādhiko</span></td></tr><tr><td>Grammar</td><td><span>m, agent, from ābādha</span></td></tr><tr><td>English</td><td><span><strong>sick person, ill man</strong></span></td></tr><tr><td></td><td><span>lit. LM3</span></td></tr><tr><td>Root</td><td><span>√bādh<sup>･</sup>1.1 a (to press, oppress)</span></td></tr><tr><td></td><td><span>RiC3 in comps</span></td></tr><tr><td>Construction</td><td><span>ā + √bādh + a + ika<br/>ābādha + ika</span></td></tr><tr><td>Derivative</td><td><span>taddhita (ika)</span></td></tr><tr><td>Sanskrit</td><td><span><i>ābādha + ika</i></span></td></tr><tr><td>Sanskrit Root</td><td><span><i>√bādh</i>&nbsp;cl. 2</span></td></tr></tbody>
    </table>
    <br /><span>ahaṃ kho pubbe <b>ābādhiko</b> ahosiṃ dukkhito bāḷhagilāno, bhattañ'ca me nacchādesi, na ca me āsi kāye balamattā</span><br /><span class="sutta-source-dpd"><i>MN 39 mahāassapurasuttaṃ</i></span><br /><br /><span>ambho purisa, na tvaṃ addasa manussesu itthiṃ vā purisaṃ vā <b>ābādhikaṃ</b> dukkhitaṃ bāḷhagilānaṃ, sake muttakarīse palipannaṃ semānaṃ, aññehi vuṭṭhāpiyamānaṃ, aññehi saṃvesiyamānan'ti?</span><br /><span class="sutta-source-dpd"><i>AN 3.36 devadūtasuttaṃ</i></span><br /><br /><div>
  <a class="dictionary-feedback-link-dpd" href="fb_url?entry.267696921=host url&entry.1433863141=host version" target="_blank">spot a mistake in the dictionary? fix it here!</a>
</div>
<br />

</div>

<div>
[ITABLE: ābādhika]
</div>
<br />

<div>
<a class="dictionary-word-back-to-top-link-dpd" href="#" onclick="document.getElementById('top-dpd').parentElement.previousElementSibling.scrollIntoView();return false;">&#x25B2; back to top</a>
</div>

